// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`icons/item-icon/ItemIcon render() should render component with additional props 1`] = `
<FileAudio32
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 2`] = `
<FileBookmark32
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 3`] = `
<FileBoxNote32
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 4`] = `
<FileCode32
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 5`] = `
<FileDefault32
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 6`] = `
<FileText32
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 7`] = `
<FileDwg32
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 8`] = `
<FileExcel32
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 9`] = `
<FolderShared32
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 10`] = `
<FolderExternal32
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 11`] = `
<FolderPersonal32
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 12`] = `
<FileDocs32
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 13`] = `
<FileSheets32
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 14`] = `
<FileSlides32
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 15`] = `
<FileIllustrator32
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 16`] = `
<FileImage32
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 17`] = `
<FileIndesign32
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 18`] = `
<FileKeynote32
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 19`] = `
<FileNumbers32
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 20`] = `
<FilePages32
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 21`] = `
<FilePdf32
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 22`] = `
<FilePhotoshop32
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 23`] = `
<FilePowerpoint32
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 24`] = `
<FilePresentation32
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 25`] = `
<FileSpreadsheet32
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 26`] = `
<FileText32
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 27`] = `
<FileThreeD32
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 28`] = `
<FolderPersonal32
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 29`] = `
<FileVector32
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 30`] = `
<FileVideo32
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 31`] = `
<FileWord32
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 32`] = `
<FileZip32
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render component with additional props 33`] = `
<FileDefault32
  className="test"
  height={10}
  title="title"
  width={10}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 1`] = `
<FileAudio32
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 2`] = `
<FileBookmark32
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 3`] = `
<FileBoxNote32
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 4`] = `
<FileCode32
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 5`] = `
<FileDefault32
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 6`] = `
<FileText32
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 7`] = `
<FileDwg32
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 8`] = `
<FileExcel32
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 9`] = `
<FolderShared32
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 10`] = `
<FolderExternal32
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 11`] = `
<FolderPersonal32
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 12`] = `
<FileDocs32
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 13`] = `
<FileSheets32
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 14`] = `
<FileSlides32
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 15`] = `
<FileIllustrator32
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 16`] = `
<FileImage32
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 17`] = `
<FileIndesign32
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 18`] = `
<FileKeynote32
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 19`] = `
<FileNumbers32
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 20`] = `
<FilePages32
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 21`] = `
<FilePdf32
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 22`] = `
<FilePhotoshop32
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 23`] = `
<FilePowerpoint32
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 24`] = `
<FilePresentation32
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 25`] = `
<FileSpreadsheet32
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 26`] = `
<FileText32
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 27`] = `
<FileThreeD32
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 28`] = `
<FolderPersonal32
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 29`] = `
<FileVector32
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 30`] = `
<FileVideo32
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 31`] = `
<FileWord32
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 32`] = `
<FileZip32
  height={32}
  width={32}
/>
`;

exports[`icons/item-icon/ItemIcon render() should render default component 33`] = `
<FileDefault32
  height={32}
  width={32}
/>
`;
